fix: height issue on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -210,7 +210,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 720px) {
+@media only screen and (max-width: 768px) {
   body {
     height: 100dvh;
   }
